# oop-labs

./: CMakeLists.txt
include/lab1-task1/: book.hpp  lib_card.hpp
include/lab1-task2/: polynomial.hpp
lab1/: CMakeLists.txt
lab1/include/lab1-task1/: book.hpp  lib_card.hpp
lab1/include/lab1-task2/: polynomial.hpp
lab1/src/lab1-task1/: book.cpp  lib_card.cpp
lab1/src/lab1-task2/: polynomial.cpp
lab2/: CMakeLists.txt
lab2/include/: dynamic_array.hpp  rational_number.hpp
lab2/src/: dynamic_array.cpp  main.cpp  rational_number.cpp
lab3/: CMakeLists.txt
lab3/include/lab3/: notebook_entry.hpp  notebook_entry_child.hpp
lab3/src/: main.cpp  notebook_entry.cpp  notebook_entry_child.cpp
lab4/: CMakeLists.txt
lab4/include/lab4-task1/: animal.hpp  bird.hpp  mammal.hpp  store.hpp
lab4/include/lab4-task2/: files.hpp
lab4/include/lab4-task3/: binary.hpp  taxi.hpp
lab4/src/: main.cpp
lab4/src/lab4-task1/: animal.cpp  bird.cpp  mammal.cpp  store.cpp
lab4/src/lab4-task2/: files.cpp
lab4/src/lab4-task3/: binary.cpp
lab4/text/: task3.txt
src/: book.cpp  lib_card.cpp  main.cpp  polynomial.cpp
src/book/: book.cpp
src/lib_card/: lib_card.cpp
